fix date align bug

--- a/style.css
+++ b/style.css
@@ -268,15 +268,16 @@ h1, h2, h3, h4, h5, h6, p, span {
 }
 
 #content .chats .chats-date {
+  /* width: 100px; */
   padding: 10px;
   margin-left: auto;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 #content .chats .chats-date h3 {
   font-size: 12px;
+  padding: 0;
 }
 
 #content .find-menu {
